Refactored into class Game

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 </head>
 <body>
 
+  <input type="text" name="" id="inputPlayerOne" placeholder="Color P1">
+  <input type="text" name="" id="inputPlayerTwo" placeholder="Color P2">
+  <button id="startGame">Start Game</button>
 <div id="game">
   <table id="board"></table>
 </div>
